--- a/Hinglish Converter.ipynb
+++ b/Hinglish Converter.ipynb
@@ -703,6 +703,54 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884b7e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Set your OpenAI API key\n",
+    "openai.api_key = 'your_openai_api_key'\n",
+    "\n",
+    "def get_translation_and_sentiment(comment):\n",
+    "    translation_prompt = f\"Translate the following Hinglish comment to English:\\n\\n'{comment}'\\n\\nTranslation:\"\n",
+    "    translation_response = openai.Completion.create(\n",
+    "        engine=\"text-davinci-003\",\n",
+    "        prompt=translation_prompt,\n",
+    "        max_tokens=150,\n",
+    "        n=1,\n",
+    "        stop=None,\n",
+    "        temperature=0.7,\n",
+    "    )\n",
+    "    translated_comment = translation_response.choices[0].text.strip()\n",
+    "\n",
+    "    sentiment_prompt = f\"Analyze the sentiment of the translated comment:\\n\\n'{translated_comment}'\\n\\nSentiment:\"\n",
+    "    sentiment_response = openai.Completion.create(\n",
+    "        engine=\"text-davinci-003\",\n",
+    "        prompt=sentiment_prompt,\n",
+    "        max_tokens=150,\n",
+    "        n=1,\n",
+    "        stop=None,\n",
+    "        temperature=0.7,\n",
+    "    )\n",
+    "    sentiment = sentiment_response.choices[0].text.strip()\n",
+    "\n",
+    "    return translated_comment, sentiment\n",
+    "\n",
+    "# Example DataFrame with a 'comments' column\n",
+    "data = {'comments': [\"application aur thoda acha ban sakta tha\", \"I really liked this feature\", \"Mujhe yeh bilkul bhi pasand nahi aaya\"]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Add new columns 'translated_comment' and 'sentiment' to the DataFrame\n",
+    "df[['translated_comment', 'sentiment']] = df['comments'].apply(get_translation_and_sentiment).apply(pd.Series)\n",
+    "\n",
+    "# Display the DataFrame with translated comments and sentiments\n",
+    "print(df)]},\n"
+   ]
   }
  ],
  "metadata": {
